--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
-black==24.3.0
-isort==5.13.2
-mypy==1.9.0
-flake8==7.0.0
+fastapi>=0.104.1
+uvicorn>=0.24.0
+pydantic>=2.5.2
+python-dotenv>=1.0.0
+black>=23.11.0
+isort>=5.12.0
+mypy>=1.7.1
+flake8>=7.0.0
 pytest==8.0.2
 pre-commit==3.6.0
