docs: Add pytest configuration
pyproject.toml 파일에 pytest 관련 설정을 추가로 작성한다.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,18 @@
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+python_files = "test_*.py"
+python_classes = "Test*"
+python_functions = "test_*"
+filterwarnings = [
+    "ignore::DeprecationWarning",
+    "ignore::PendingDeprecationWarning",
+]
+markers = [
+    "unit: marks unit tests",
+    "integration: marks integration tests",
+]
+addopts = "--strict-markers"
+
 [tool.black]
 line-length = 88
 target-version = ["py312"]
