--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,16 +26,40 @@ jobs:
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
     - name: Lint with black
-      run: black --check .
+      run: |
+        python_files=$(find . -name "*.py" -not -path "./agents/*" -type f | tr '\n' ' ')
+        if [ -n "$python_files" ]; then
+          black --check $python_files
+        else
+          echo "No Python files to check with black"
+        fi
 
     - name: Lint with isort
-      run: isort --check .
+      run: |
+        python_files=$(find . -name "*.py" -not -path "./agents/*" -type f | tr '\n' ' ')
+        if [ -n "$python_files" ]; then
+          isort --check $python_files
+        else
+          echo "No Python files to check with isort"
+        fi
 
     - name: Lint with flake8
-      run: flake8 .
+      run: |
+        python_files=$(find . -name "*.py" -not -path "./agents/*" -type f | tr '\n' ' ')
+        if [ -n "$python_files" ]; then
+          flake8 $python_files
+        else
+          echo "No Python files to check with flake8"
+        fi
 
     - name: Type check with mypy
-      run: mypy .
+      run: |
+        python_files=$(find . -name "*.py" -not -path "./agents/*" -type f | tr '\n' ' ')
+        if [ -n "$python_files" ]; then
+          mypy $python_files
+        else
+          echo "No Python files to check with mypy"
+        fi
 
   test:
     name: Test
@@ -56,7 +80,7 @@ jobs:
         pip install pytest pytest-cov
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
-    - name: Test agent_discovery
+    - name: Test ci_test_app
       run: python -m pytest ci_test_app/tests --cov=ci_test_app --cov-report=term --cov-report=xml:ci_test_app-coverage.xml
 
     - name: Upload coverage reports
@@ -84,7 +108,7 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
 
-    - name: Build and push agent_discovery
+    - name: Build and push ci_test_app
       uses: docker/build-push-action@v4
       with:
         context: ./ci_test_app
