fix(ci): Codecov 레이트 리밋 문제 해결
- Codecov 업로드 실패 시에도 CI 파이프라인이 중단되지 않도록 수정
- fail_ci_if_error: false 설정으로 토큰 없이도 파이프라인 계속 진행
- CODECOV_TOKEN 환경 변수 지원 추가

이 변경으로 Codecov 레이트 리밋에 도달해도 CI 파이프라인이
정상적으로 완료될 수 있습니다. 향후 CODECOV_TOKEN을
저장소 Secrets에 추가하면 레이트 리밋 문제도 해결됩니다.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,13 +63,13 @@ jobs:
       uses: codecov/codecov-action@v3
       with:
         files: ./ci_test_app-coverage.xml
-        fail_ci_if_error: true
+        token: ${{ secrets.CODECOV_TOKEN }}
+        fail_ci_if_error: false
 
   build-and-push:
     name: Build and Push Docker Images
-    needs: test  # 테스트 작업이 성공해야 빌드 실행
+    needs: test
     runs-on: ubuntu-latest
-    # Only run on push to main or develop, not on PRs
     if: github.event_name == 'push'
 
     steps:
