--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,7 +35,7 @@ jobs:
       run: flake8 agent_discovery
 
     - name: Type check with mypy
-      run: mypy --exclude 'agent_discovery/tests/' agent_discovery
+      run: PYTHONPATH=. mypy --exclude 'agent_discovery/tests/' agent_discovery
 
   test:
     name: Test
